--- a/influencer-gear-main/style.css
+++ b/influencer-gear-main/style.css
@@ -77,6 +77,7 @@ button:active{
     grid-template-columns: repeat(7,1fr);
     align-items: center;
     margin-left: 60px;
+    
 }
 /* collection */
 .home{
@@ -113,6 +114,7 @@ span{
 .parent{
     box-shadow: 0 0 40px rgba(0,0,0,0.15 );
     margin: 0 30px;
+    padding: 15px;
 
 
 }
@@ -120,6 +122,41 @@ span{
    color:#e02c6d; 
    font-size: 20px;
    outline: 0;
-   border: 0px;
+   border: 0;
+   float: right;
+   margin-top: 35px;
  
+}
+
+/* last part */
+
+
+.footing{
+    text-align: center;
+   
+}
+.icon {
+display: flex; 
+justify-content: center;
+align-items: center;
+
+
+}
+.icon li {
+list-style: none;
+}
+.footing p{
+    color: aliceblue;
+}
+.white{
+    color: aliceblue;
+}
+footer{
+    background-color:#090432;
+  height: auto;
+  padding: 40px 0;
+  margin-top: 150px;
+}
+.icon a{
+    padding-right: 35px;
 }
