--- a/influencer-gear-main/style.css
+++ b/influencer-gear-main/style.css
@@ -110,6 +110,7 @@ span{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-row-gap: 30px;
+  
 }
 .parent{
     box-shadow: 0 0 40px rgba(0,0,0,0.15 );
@@ -124,8 +125,31 @@ span{
    outline: 0;
    border: 0;
    float: right;
-   margin-top: 35px;
+  margin: 50px;
  
+}
+/* bonas part */
+.more{
+    display: flex;
+    margin-top:150px;
+   
+   
+}
+.info{
+    margin-left:350px;
+}
+.gadget{
+    margin-left: 40px;
+}
+.picture:hover img{
+    transform: scale(1.3);
+    transition: transform 2s ease-in;
+}
+.info p{
+    color: #787885;
+}
+.text-content{
+    font-size: 50px;
 }
 
 /* last part */
@@ -159,4 +183,5 @@ footer{
 }
 .icon a{
     padding-right: 35px;
+    color:aliceblue;
 }
