--- a/influencer-gear-main/style.css
+++ b/influencer-gear-main/style.css
@@ -113,7 +113,7 @@ span{
   
 }
 .parent{
-    box-shadow: 0 0 40px rgba(0,0,0,0.15 );
+    box-shadow: 0px 0px  40px rgba(0,0,0,0.15 );
     margin: 0 30px;
     padding: 15px;
 
@@ -141,15 +141,16 @@ span{
 .gadget{
     margin-left: 40px;
 }
-.picture:hover img{
-    transform: scale(1.3);
-    transition: transform 2s ease-in;
-}
+ 
 .info p{
     color: #787885;
 }
 .text-content{
     font-size: 50px;
+}
+.gadget:hover img{
+    transform: scale(1.1);
+    transition: transform 2s ease-in;
 }
 
 /* last part */
